# symODE

./: CITATION.cff  CircularRealFunction.py  DynamicalSystem.py  LICENSE  README.md  SystemsCatalogue.py  TUTORIAL - dynamical systems.ipynb  implement_numba.ipynb  pyproject.toml  scripts.py
examples/: TUTORIAL - circular functions.ipynb  TUTORIAL - dynamical systems.ipynb  TUTORIAL - jacobian.ipynb  TUTORIAL - observables.ipynb  TUTORIAL - solve equations.ipynb  tutorial-01-getting-started.ipynb
src/: CircularRealFunction.py  DynamicalSystem.py  SystemsCatalogue.py  circular_function.py  dynamical_system.py  systems_catalogue.py  util.py
symode/: circular_function.py  componentwise_expression.py  dynamical_system.py  systems_catalogue.py  util.py
tests/: test_dynamical_system.py
