[project]
name = "symode"
version = "0.1.0"
description = "symODE is a tool for symbolic and numerical analysis of ordinary differential equations."
authors = [
    {name = "Erik T. K. Mau"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sympy (>=1.13.3,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "numba (>=0.61.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = { version = "*", extras = ["poetry_plugin"] }
black = "*"
pylint = "*"
mypy = "*"

[tool.poetry.group.interactive]
optional = true

[tool.poetry.group.interactive.dependencies]
jupyter = "*"
matplotlib = "*"
black = { version = "*", extras = ["jupyter"] }

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
format = "black ./examples/ ./symode/"
lint = "pylint ./examples/ ./symode/"
